# ranchwiki

./: .clang-format  .gitignore  .vimlocal  .vimspector.json  CMakeLists.txt  clang-format  ranch.afdesign
src/: .container.c.swp  .main..swp  .main.c.swp  .web.c.swp  container.c  container.h  context.c  context.h  filemap.c  filemap.h  main.c  main.h  reasonphrases.h  router.c  router.h  web.c  web.h  wiki.c  wiki.h
templates/: account.html  article.html  edit.html  error.html  global.html  home.html  login.html  main.css  new.html  profile.html  users.html
wiki/: article_abc  article_id  article_new  articles  articles_by_name  gdb.txt  users  users_by_email  users_by_name  word  wordi
wiki/data/: DOSE  asmr  boye  oss  ranch  rub  wiki oss  wiki ranch
wiki/data/quotes/: arial  kitten
